--- a/templates/product/producto.html
+++ b/templates/product/producto.html
@@ -16,7 +16,6 @@ Products
                 <th>Marca</th>
                 <th>Codigo de barras</th>
                 <th>Precio</th>
-                
                 <th>Acciones</th>
             </tr>
         </thead>
@@ -30,17 +29,20 @@ Products
                     <td>{{ pro.precio_producto }}</td>
                     
                     <td>
-                        
-                        <a href="{{ url_for('product.update_pro', id_producto=pro.id_producto) }}">
-                            <i class="fa fa-pencil"></i>
-
-                    
-                    </a>
-                    <form action="{{ url_for('product.delete_pro', id_producto=pro.id_producto) }}" method="post">
-                        <button type="submit" onclick="return confirm('Seguro de que quieres eliminar')">
-                            <i class="fa fa-trash"></i>
-                        </button>
-                    </form>
+                        <center>
+                                <button> 
+                                    <a href="{{ url_for('product.update_pro', id_producto=pro.id_producto) }}">
+                                        <i class="fa fa-pencil"></i>
+                                </button>  
+                            
+                                
+                                <form action="{{ url_for('product.delete_pro', id_producto=pro.id_producto) }}" method="post">
+                                
+                                <button type="submit" onclick="return confirm('Seguro de que quieres eliminar')">
+                                    <i class="fa fa-trash"></i>
+                                </button>
+                            </form>
+                        </center>
                     </td>
                 </tr>
             {% endfor %}
