--- a/templates/base.html
+++ b/templates/base.html
@@ -12,13 +12,14 @@
         <ul>
             <img src="{{ url_for('static', filename='images/maiker.jpg')}}" alt="Logo de Mi Sitio" class="logo-footer">
             {% if user %}
+            {{ current_user }}
             <li><a href="{{ url_for('home.home') }}">Inicio</a></li>
             <li><a href="{{ url_for('home.contact') }}">Acerca de</a></li>
             <li><a href="{{ url_for('product.producto') }}">Productos</a></li>
             <li><a href="{{ url_for('proveedor.proveedor') }}">Proveedores</a></li>
             <li><a href="{{ url_for('cliente.cliente') }}">Clientes</a></li>
             <li><a href="{{ url_for('compra.compra') }}">Compra</a></li>
-            <li><a href="{{ url_for('home.home') }}">Cerrar sesión</a></li>
+            <li><a href="{{ url_for('user.logout') }}">Cerrar Sesion</a></li>
             {% else %}
             {% endif %}
             {% if user %}
@@ -27,6 +28,7 @@
             <li><a href="{{ url_for('home.contact') }}">Acerca de</a></li>
             <li><a href="{{ url_for('user.register') }}">Registro</a></li>
             <li><a href="{{ url_for('user.login') }}">Iniciar Sesión</a></li>
+            <li><a href="{{ url_for('user.logout') }}">Cerrar Sesion</a></li>
             {% endif %}
 
             
