--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -57,7 +57,8 @@
   <!-- Otras secciones del sitio web aquí -->
 
 </body>
-
-<img src="{{ url_for('static', filename='images/tienda.jpg') }}" width="100%" alt="wqdwqd">
+<div class="image-movimiento">
+  <img src="{{ url_for('static', filename='images/11.jpg') }}" width="100%" alt="wqdwqd">
+</div>
 <p>Autor: {{ name }}</p>
 {% endblock %}
